<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/customerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name" />

    <EditText
        android:id="@+id/customerNameEditText"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_custName"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/foodItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item" />

    <EditText
        android:id="@+id/foodItemEditText"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_foodItem"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_size" />

    <EditText
        android:id="@+id/sizeEditText"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_size"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity" />

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textAlignment="center" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel" />

</LinearLayout>
