<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Usser_History">

    <TextView
        android:id="@+id/txtOrderDetAndStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/historyName"
        android:textColor="@color/BasilGreen_800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="59dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />


        <View
            android:id="@+id/topLineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/orderStatusTextView"/>

        <TextView
            android:id="@+id/txtRName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyRName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/txtTPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyTPrice"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyline"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histoyTItem"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />


        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyDItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyPickup"
            android:textStyle="bold" />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <View
            android:id="@+id/bottomLineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>